<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Movies</string>
    <string name="default_loader">Loading Movies...</string>
    <string name="more_loading">Loading More Movies...</string>
    <string name="loading_detail">Loading Movie...</string>
    <string name="title_activity_main_detail">MainDetailActivity</string>
    <string name="movie_detail_synopsis">Synopsis</string>
    <string name="movie_detail_description">Description</string>
    <string name="movie_detail_year">Release Year : </string>
    <string name="movie_detail_rating">Rating : </string>
    <string name="movie_detail_runtime">Runtime : </string>
    <string name="movie_detail_language">Language : </string>
    <string name="movie_detail_mpa_rating">Category : </string>
    <string name="movie_detail_download">Downloads : </string>
    <string name="movie_detail_like">Likes : </string>
    <string name="movie_detail_audience_score">Audience Score : </string>
    <string name="movie_detail_audience_rating">Audience Rating : </string>
    <string name="movie_detail_critics_score">Critics Score : </string>
    <string name="movie_detail_critics_rating">Critics Rating : </string>
    <string name="movie_detail_genre">Genre : </string>
    <string name="movie_detail_actors">Cast : </string>
    <string name="movie_detail_directors">Director : </string>
    <string name="empty"></string>

</resources>
