<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stayzilla.moviedetail.MainDetailActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ColorPrimary"
        android:elevation="4dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:background="@drawable/loader"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descriptionIntro"
                    style="@style/HeadingValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_detail_description" />

                <LinearLayout
                    android:id="@+id/synopsisLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_synopsis"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/actorLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_actors"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/actor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/genreLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_genre"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/directorLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_directors"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/releaseYearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_year"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ratingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_rating"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/languageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_language"
                        style="@style/HeadingStyle"/>

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/runTimeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_runtime"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/runTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoryLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_mpa_rating"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/audienceScoreLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_audience_score"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/audienceScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/criticsScoreLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_critics_score"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/criticsScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/audienceRatingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_audience_rating"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/audienceRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/criticsRatingLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_critics_rating"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/criticsRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/downloadLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_download"
                        style="@style/HeadingStyle" />

                    <TextView
                        android:id="@+id/download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/likeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_detail_like"
                        style="@style/HeadingStyle"/>

                    <TextView
                        android:id="@+id/like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/textViewGap"
                        style="@style/HeadingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/imageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layoutGap"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/movieScreenshot1"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/loader"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/movieScreenshot2"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:adjustViewBounds="true"
                        android:layout_marginTop="@dimen/textViewGap"
                        android:background="@drawable/loader"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:id="@+id/movieScreenshot3"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:adjustViewBounds="true"
                        android:layout_marginTop="@dimen/textViewGap"
                        android:background="@drawable/loader"
                        android:scaleType="centerCrop" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/loaderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/circular_border_gray"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/loader_width"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/loaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/loading_detail"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
